Title language switch to Croatian

--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -177,7 +177,7 @@
 \emph{\large Matija Bedeković, Bruno Marić, Martina Tomić}\\
 \vspace{0.5cm}
 \begin{Huge}
-	Design and development of a small-scale multi-rotor UAV with moving mass control
+	Dizajn i razvoj male multirotorske letjelice s upravljanjem zasnovanim na pomičnim masama
 \end{Huge}
 \vspace*{\fill}
 
@@ -227,7 +227,7 @@ Zagreb, \the\year
 \input{Uvod/Uvod}
 
 %%%%% ODKOMENTIRATI DA UVOD BUDE STRANICA 1 %%%%%%
-%\setcounter{page}{1}
+\setcounter{page}{1}
 
 \newpage
 \section{Opći i specifični ciljevi rada} 
@@ -247,10 +247,10 @@ Zagreb, \the\year
 
 
 \newpage
-\section*{Zaključak} 
-\addcontentsline{toc}{section}{\protect\numberline{}Zaključak}
+\section{Zaključak} 
+%\addcontentsline{toc}{section}{\protect\numberline{}Zaključak}
 \input{Zakljucak/Zakljucak}
-\thispagestyle{plain}
+%\thispagestyle{plain}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
