--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -230,20 +230,32 @@ Zagreb, \the\year
 \setcounter{page}{1}
 
 \newpage
-\section{Opći i specifični ciljevi rada} 
-\input{Ciljevi/Ciljevi}
+\section{Opis koncepta} 
+\input{Koncept/Koncept}
 
 \newpage
-\section{Materijal i metode}
-\input{Materijal/Materijal}
+\section{Matematički model}
+\input{Model/Model}
 
 \newpage
-\section{Rezultati}
-\input{Rezultati/Rezultati}
+\section{Identifikacija}
+\input{Identifikacija/Identifikacija}
 
 \newpage
-\section{Rasprava}
-\input{Rasprava/Rasprava}
+\section{CAD model}
+\input{CAD/CAD}
+
+\newpage
+\section{Hardwareska struktura}
+\input{Hardware/Hardware}
+
+\newpage
+\section{Softwareska struktura}
+\section{Software}
+
+\newpage
+\section{Eksperimentalno testiranje}
+\input{Exp/Exp}
 
 
 \newpage
