--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -149,7 +149,7 @@
 \usepackage{tocloft}
 \usepackage{import}
 \usepackage{standalone}
-\graphicspath{{Uvod/}, {Ciljevi/}, {Materijal/}, {Rasprava/}, {Rezultati/}} 
+\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}} 
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -277,7 +277,7 @@ Zagreb, \the\year
 \thispagestyle{plain}
 
 \newpage
-\section*{Literatura}
+%\section*{Literatura}
 \addcontentsline{toc}{section}{\protect\numberline{}Literatura}
 \input{Literatura/Literatura}
 \thispagestyle{plain}
