--- a/Rektor_2017/Hardware/Hardware.tex
+++ b/Rektor_2017/Hardware/Hardware.tex
@@ -163,6 +163,9 @@
 \begin{document}
 
 
-HARDWARE - BRUNO 
+
+\subsection{Mehanička konstrukcija}
+
+\subsection{Elektronika i ožičenje}
 
 \end{document}
