Changes to Literature and master.

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -176,6 +176,18 @@
   \emph{Design considerations for a large quadrotor with moving mass control},
   International Conference on Unmanned Aircraft Systems (ICUAS),
   2016.
+  
+\bibitem{kova}
+  Z. Kovačić, S. Bogdan, V. Krajči,
+  \emph{Osnove Robotike},
+  Graphis,
+  Zagreb 2002.
+  
+\bibitem{urs}
+  S. Bogdan,
+  \emph{Zračna robotika: Bespilotne letjelice (UAVs)},
+  Upravljanje robotskim sustavima, Fakultet Elektrotehnike i Računarstva,
+  Zagreb 2009/2010.
  
 \end{thebibliography}
 
