--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -149,7 +149,7 @@
 \usepackage{tocloft}
 \usepackage{import}
 \usepackage{standalone}
-\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}} 
+\graphicspath{{Uvod/figures/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}} 
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
