Modify CAD.tex. Start Hardware.tex, add Hardware/figures

--- a/Rektor_2017/CAD/CAD.tex
+++ b/Rektor_2017/CAD/CAD.tex
@@ -166,7 +166,7 @@
 
 CAD MODEL mehaničke konstrukcije - BRUNO
 
-U ovom poglavlju je opisana mehanička konstrukcija letjelice. Osnova je postojeća laboratorijska letjelica ARDUCOPTER. Letjelica ARDUCOPTER je standarnog dizajna, s četiri pogonska $brushles DC$ motora s pripadnim $ESC$ pogonima. Zbog jednostavnog dizajna, vrlo je jednostavno raditi razne promjene i dodavati razne upravljačke uređaje, senzore i aktuatore. U laboratoriju trenutno postoji nekoliko modela letjelica ovog tipa koje se koriste za većinu eksperimenata. Dizajn i veličina letjelice je prikladna za sve eksperimente koji se provode u laboratoriju, uključujući planiranje i izvođenje trajektorija u prostoru, manipulaciju objekata i drugo. Upravo zato odlučeno je modificirati jednu od postojećih konstrukcija te izraditi platformu za eksperimentalno testiranje novog koncepta upravljanja višerotorskom letjelicom. Glavna modifikacija se odnosi na dizajniranje i izradu mehanizma kojim će se omogućiti pomak mase na kraku. Također, potrebno je smjestiti sve ostale komponente nužne za upravljanje letjelicom, poput kontrolera leta i upravljačkog sklopovlja pomičnih masa.
+U ovom poglavlju je opisana mehanička konstrukcija letjelice. Osnova je postojeća laboratorijska letjelica ARDUCOPTER. Letjelica ARDUCOPTER je standarnog dizajna, s četiri pogonska $brushles DC$ motora s pripadnim $ESC$ pogonima. Zbog jednostavnog dizajna, vrlo je jednostavno raditi razne promjene i dodavati razne upravljačke uređaje, senzore i aktuatore. U laboratoriju trenutno postoji nekoliko modela letjelica ovog tipa koje se koriste za većinu eksperimenata. Dizajn i veličina letjelice je prikladna za sve eksperimente koji se provode u laboratoriju, uključujući planiranje i izvođenje trajektorija u prostoru, manipulaciju objekata i drugo. Upravo zato odlučeno je modificirati jednu od postojećih konstrukcija te izraditi platformu za eksperimentalno testiranje novog koncepta upravljanja višerotorskom letjelicom. Glavna modifikacija se odnosi na dizajniranje i izradu mehanizma kojim će se omogućiti pomak mase na kraku. Također, potrebno je smjestiti sve ostale komponente nužne za upravljanje letjelicom, poput kontrolera leta i upravljačkog sklopovlja pomičnih masa. Za izradu dizajna je korišten CAD alat SOLIDWORKS.
 
 \begin{figure}[H]
 	\centering
@@ -296,6 +296,8 @@ Zupčasta letva(slika \ref{fig:gear_rack}) je zaljepljena na bočnu stranu alumi
 Za dizajniranje mehaničke konstrukcije korišten je CAD alat SOLIDWORKS. Navedeni alat omogućava 3D modeliranje svih dijelova od kojih je izrađena letjelica. Nakon dizajniranja svakog pojedinog dijela, prelazi se na spajanje dijelova u veće cjeline. Prednost 3D modeliranja je trenutni pregled izgleda konstrukcije, kao i mogućnost izvoza svakog pojedinog dijela u neki od standardnih formata. 
 
 U izradi nekih dijelova konstrukcije korištena je tehnologija 3D printanja. 3D printanje je jednostavno i efikasno rješenje u izradi prototipa. Nakon izrade 3D modela u nekom od CAD alata, u ovom slučaju SOLIDWORKS, radi se priprema pojedinog elementa za izradu. Priprema uključuje učitavanje elementa u poseban softver proizvođača 3D printera. Nakon postavljanja svih parametara izrade poput preciznosti, ispunjenosti i dr. slijedi izvoz podataka u poseban format koji koristi 3D printer. Nakon toga slijedi izrada koja je u potpunosti automatizirana.
+
+Dodatno, za montažu kliznih mehanizama na aluminijske kvadratne cijevi bilo je potrebno precizno izbušiti rupe, kroz koje će se pomoću vijka pričvrstiti klizni mehanizam. Budući da je bila potrebna velika preciznost, korišten je CNC stroj.
 
 Nakon pripreme svih dijelova, slijedi montaža. Slikom \ref{fig:arm_assembly} prikazan je konačni 3D model pokretne mase na kraku letjelice.
 
