Modified Uvod chapter.

--- a/Rektor_2017/Uvod/Uvod.tex
+++ b/Rektor_2017/Uvod/Uvod.tex
@@ -166,7 +166,7 @@ Robotika je grana tehnologije koja se bavi dizajnom, izradom, upravljanjem i pri
 
 \medskip
 
-Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i civilne. Prva grupa, \textit{vojne aplikacije}, uključuje akcije kao što su target and decoy, praćenje i izviđanje, sudjelovanje u borbi i logističke primjene, dok druga grupa, \textit{civilne aplikacije}, uključuje akcije kao što su nadgledanje prometa i vremena, vatrogastvo, poljoprivreda, traženje i spašavanje, te istraživanje i razvoj. \cite{urs} Teži se razvoju autonomnih robotskih sustava, sposobnih za rad u izrazito dinamičnim i nedeterminističnim okruženjima.
+Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i civilne. Prva grupa, \textit{vojne aplikacije}, uključuje akcije kao što su target and decoy, praćenje i izviđanje, sudjelovanje u borbi i logističke primjene, dok druga grupa, \textit{civilne aplikacije}, uključuje akcije kao što su nadgledanje prometa i vremena, vatrogastvo, poljoprivreda, traženje i spašavanje, te istraživanje i razvoj. \cite{urs} Teži se razvoju autonomnih robotskih sustava, sposobnih za rad u izrazito dinamičnim i nedeterminističkim okruženjima.
 
 \medskip
 
@@ -177,16 +177,16 @@ Potencijalne primjene bespilotnih letjelica dijele se na dvije grupe, vojne i ci
 	\label{fig:koord}
 \end{figure}
 
-Ideja ovog rada proizlazi iz želje za razvojem jednog takvog autonomnog heterogenog robotskog sustava, sačinjenog od bespilotne letjelice i bespilotne ronilice, kao što je prikazano na slici \ref{fig:koord}. Ovakav robotski sustav služio bi u misijama izviđanja na moru. Znanstvenici sa Fakulteta elektrotehnike i računarstva u Zagrebu, na Zavodu za Automatiku i Računalno Inženjerstvo u Laboratoriju za Robotiku i Inteligentne Sustave Upravljanja, pod vodstvom prof. dr. sc. Stjepana Bogdana rade na razvoju jednog ovakvog sustava na projektu pod imenom MORUS. Cilj ovog robotskog sustava bila bi koordinirana akcija između letjelice i ronilice, u kojoj bi se ronilica u bazi na obali prikvačila za letjelicu, koja bi ju potom prevezla do mjesta na kojoj se obavlja određena misija te ju postavila u more i zatim se vratila u bazu. Po završetku misije letjelica bi otišla po ronilicu, izvukla ju iz mora te vratila na početni položaj, odnozno u bazu. \cite{haus2}
+Ideja ovog rada proizlazi iz želje za razvojem jednog takvog autonomnog heterogenog robotskog sustava, sastavljenog od bespilotne letjelice i bespilotne ronilice, kao što je prikazano na slici \ref{fig:koord}. Ovakav robotski sustav služio bi u misijama izviđanja na moru. Znanstvenici sa Fakulteta elektrotehnike i računarstva u Zagrebu, na Zavodu za Automatiku i Računalno Inženjerstvo u Laboratoriju za Robotiku i Inteligentne Sustave Upravljanja, pod vodstvom prof. dr. sc. Stjepana Bogdana rade na razvoju jednog ovakvog sustava na projektu pod imenom MORUS. Cilj ovog robotskog sustava bila bi koordinirana akcija između letjelice i ronilice, u kojoj bi se ronilica u bazi na obali prikvačila za letjelicu, koja bi ju potom prevezla do mjesta na kojoj se obavlja određena misija te ju postavila u more i zatim se vratila u bazu. Po završetku misije letjelica bi otišla po ronilicu, izvukla ju iz mora te vratila na početni položaj, odnozno u bazu. \cite{haus2}
 
 
 \medskip
 
 
-Instinktivno je jasno kako su na ovakvu letjelicu postavljeni strogi uvjeti vezani za njezinu izdržljivost. Maksimalna masa tereta koju robot može prenijeti i maksimalna brzina gibanja robota ovise o tipu robota i njegovoj primjeni. \cite{kova}  Kako bi bespilotna letjelica bila sposobna podići i prenijeti bespilotnu ronilicu na predodređenu lokaciju, ona treba imati veliku nosivost ($\geq$ 50kg) i duže vrijeme leta ($\geq$ 30min) . Komercijalne bespilotne letjelice ne ispunjavaju zadane kriterije. Njihovo se upravljanje temelji na promjeni brzine rotacije propelera te na korištenju električnih DC motora. S obzirom na uvjet veće nosivosti letjelice javila se potreba za razvojem u potpunosti novog sustava upravljanja. Električni DC motori zamjenjeni su benzinskim motorima, dok se uz klasični uvodi i novi koncept upravljanja temeljen na promjeni centra mase letjelice. \cite{haus1}
+Instinktivno je jasno kako su na ovakvu letjelicu postavljeni strogi uvjeti vezani za njezinu izdržljivost. Maksimalna masa tereta koju robot može prenijeti i maksimalna brzina gibanja robota ovise o tipu robota i njegovoj primjeni. \cite{kova}  Kako bi bespilotna letjelica bila sposobna podići i prenijeti bespilotnu ronilicu na predodređenu lokaciju, ona treba imati veliku nosivost ($\geq$ 50kg) i duže vrijeme leta ($\geq$ 30min) . Komercijalne bespilotne letjelice ne ispunjavaju zadane kriterije. Njihovo se upravljanje temelji na promjeni brzine rotacije propelera te na korištenju električnih DC motora. S obzirom na zahtjev veće nosivosti letjelice javila se potreba za razvojem u potpunosti novog sustava upravljanja. Električni DC motori su za početak zamjenjeni benzinskim motorima. Zbog spore dinamike benzinskih motora se uz klasični uvodi i novi koncept upravljanja temeljen na promjeni centra mase letjelice. \cite{haus1}
 
 \medskip
 
-Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove, te zahtjevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice. Glavna je motivacija biti u mogućnosti testirati algoritme upravljanja u laboratorijskim uvjetima. Ovaj rad stoga nastoji doprinjeti dizajnu i razvoju jedne takve letjelice te primjeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
+Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtjevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice. Glavna je motivacija biti u mogućnosti testirati algoritme upravljanja u laboratorijskim uvjetima. Ovaj rad stoga nastoji doprinjeti dizajnu i razvoju jedne takve letjelice te primjeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
 
 \end{document}
