--- a/Rektor_2017/Hardware/Hardware.tex
+++ b/Rektor_2017/Hardware/Hardware.tex
@@ -253,28 +253,57 @@ Za izvor takta mikrokontrolera korišten je kristalni oscilator nazivne frekvenc
 \subsubsection{LED indikatori}
 Prilikom izrade prototipa elektroničkog sklopovlja utvrđena je potreba postojanja LED indikatora. LED indikatori se koriste u svrhu provjere ispravnosti rada programske potpore. U ovom slučaju, dodane su 4 LED diode različitih boja. LED diode su spojene na mikorokontroler, a za izvor napajanja se koristi regulirani napon iznosa 5V. Upravljanje LED diodama je ostvareno mikrokontrolerom i bipolarnim NPN tranzistorom. Struja koja protječe LED diodom prilikom visoke razine upravljačkog signala iz mikrokontrolera je ograničena dodavanjem otpornika iznosa 500 V. 
 
+
+\subsubsection{Pogon koračnih motora}
+
+Pogon koračnih motora ostvaren je gotovim sklopom A4988. Navedeni sklop ima sadržano upravljanje naponima i strujama svake faze koračnog motora. Pogonski sklop predstavlja međusklop između koračnog motora i mikroprocesora. Mikroprocesor postavljanjem logičkih razina na predviđene pinove upravlja smjerom vrtnje i rezolucijom koraka. Kretanje motora je izvodi generiranjem impulsnog signala. Generiranje impulsnog signala je ostvareno prikladnom programskom potporom mikrokontrolera. Specifikacije sklopa A4988 prikazane su tablicom \ref{tab:specifikacija_stepper_driver}.
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.4\textwidth]{figures/driver.jpg}
+	\caption{Prikaz pogona koračnog motora}
+	\label{Slika:stepper_driver}
+\end{figure}
+
+Sklop A4988 se napaja izravno s baterije, a napajanje logike je ostvareno korištenjem ugrađenih regulatora napona u samom sklopu. Mikrokontroler upravlja radom pogonskog sklopa pomoću 5 pinova:
+\begin{center}
+	\begin{itemize}
+		\item STP - impulsni signal broja koraka
+		\item DIR - smjer vrtnje motora
+		\item MS1 - upravljanje rezolucijom koraka
+		\item MS2 - upravljanje rezolucijom koraka
+		\item MS3 - upravljanje rezolucijom koraka
+	\end{itemize}
+\end{center}
+
+
 \begin{table}[H]
 	\centering
-	\caption{Specifikacije LED dioda: }
-	\label{tab:specifikacija_MCU}
+	\caption{Specifikacije pogona koračnih motora: }
+	\label{tab:specifikacija_stepper_driver}
 	\begin{tabular}{|l|c|}
 		\hline
-		\textbf{Proizvođač} & Kingbright \\ \hline 
-		\textbf{Model} & KPT-2012SECK \\ \hline 
-		\textbf{Footprint} & SMD, 0805  \\ \hline 
-		\textbf{Korištene boje} & crvena, naranasta, plava, žuta, zelena \\ \hline 
-		\textbf{Veličina RAM memorije} & 192 KB \\ \hline 
-		\textbf{Broj pinova} & 64 \\ \hline 
-		\textbf{Broj I/O jedinica} & 51 \\ \hline 
-		\textbf{Ugrađena sučelja} & CAN, I2C, SPI, UART, USART, USB\\ \hline 
-		\textbf{Minimalni napon napajanja} & 1.8 V\\ \hline 
-		\textbf{Maksimalni napon napajanja} & 3.6 V\\ \hline 
+		\textbf{Proizvođač} & Pololu \\ \hline 
+		\textbf{Model} & A4988 \\ \hline 
+		\textbf{Veličina} &    \\ \hline 
+		\textbf{Masa} & 3.3 g \\ \hline 
+		\textbf{Minimalni ulazni napon} & 8 V \\ \hline 
+		\textbf{Maksimalni ulazni napon} & 35 V \\ \hline 
+		\textbf{Kontinuirana stuja po fazi} & 1 A, bez hladnjaka \\ \hline 
+		\textbf{Maksimalna struja po fazi} & 2 A, s hladnjakom \\ \hline 
+		\textbf{Minimalni napon logike} & 3 V\\ \hline 
+		\textbf{Maksimalni napon logike} & 5.5 V\\ \hline 
+		\textbf{Rezolucija mikrokoraka} & puni korak, 1/2, 1/4, 1/8 i 1/16\\ \hline 
+		\textbf{Zaštita obrnutog polariteta} & Da\\ \hline 
 	\end{tabular}
 \end{table}
 
 
-\subsubsection{Pogon koračnih motora}
 \subsubsection{Konektori}
+
+
+
 \subsubsection{Dynamixel}
 \subsubsection{CAN}
 
