--- a/Rektor_2017/Koncept/Koncept.tex
+++ b/Rektor_2017/Koncept/Koncept.tex
@@ -162,6 +162,18 @@
 \usepackage{lscape}
 \begin{document}
 
-OPIS KONCEPTA - MARTINA
+
+Kao što je spomenuto u uvodu ovog rada, cilj je dizajnirati i razviti laboratorijski model letjelice u svrhu testiranja novog koncepta upravljanja zasnovanog na promjeni centra mase letjelice. 
+
+\medskip
+
+Promjena centra mase letjelice postiže se promjenom pozicije pomičnih masa smještenih na krakove letjelice. Ta promjena uzrokuje nastanak momenata kuteva  valjanja (\textit{roll}) i poniranja (\textit{pitch}), što zauzvrat služi za kontrolu pozicije letjelice. Grafički prikaz uzroka i posljedice ovog koncepta upravljanja prikazan je slikom \ref{kontrol}. Kako bi upravljanje bilo linearno nezavisno, multirotorska letjelica mora biti konstruirana u standardnoj \textit{plus konfiguraciji}. \cite{haus1}
+
+\bigskip
+DODATI SLIKU
+
+Bitno je naglasiti kako se za upravljanje visine letjelice te kuta njezinog zakreta i dalje koristi klasična metoda upravljanja, ona zasnovana na promjeni brzine vrtnje propelera. U nastavku ovog rada glavni će fokus biti na novom konceptu upravljanja. 
+
+
 
 \end{document}
